En este commit se agrega la funcionalidad de que el usuario pueda mostrar un numero manualmente, olvide agregarlo en el commit anterior

--- a/modulo-4-funciones/index.html
+++ b/modulo-4-funciones/index.html
@@ -21,6 +21,12 @@
       <button class="boton resetBtn">Resetear</button>
       <button class="boton siguienteBtn">Siguiente</button>
     </div>
+    <br>
+    <div class="numeroPersonalizado">
+      <label for="numeroUsuario">Por favor escribir el numero que desea Mostrar:</label><br><br>
+      <input type="text" class="numeroUsuario" id="numeroUsuario" placeholder="Insertar el numero:">
+      <button class="boton insertarNum">Mostrar</button>
+    </div>
   </div>
   <script type="module" src="/src/main.ts"></script>
 </body>
