cambios en index y main TS

--- a/modulo-4-funciones/index.html
+++ b/modulo-4-funciones/index.html
@@ -17,9 +17,9 @@
     </div>
     <br>
     <div class="botones">
-      <button class="boton anteriorBtn">Anterior</button>
-      <button class="boton resetBtn">Resetear</button>
-      <button class="boton siguienteBtn">Siguiente</button>
+      <button class="boton anteriorBtn">Turno Anterior</button>
+      <button class="boton resetBtn">Resetear Turnos</button>
+      <button class="boton siguienteBtn">Siguiente Turno</button>
     </div>
     <br>
     <div class="numeroPersonalizado">
