Finalizado el laboratorio del modulo 5 condicionales

--- a/modulo-5-condicionales/index.html
+++ b/modulo-5-condicionales/index.html
@@ -10,9 +10,23 @@
 
 <body>
   <div id="app">
-    <img src="https://raw.githubusercontent.com/Lemoncode/fotos-ejemplos/main/cartas/back.jpg" alt="" class="carta">
-    <button class="pedirCarta">Pedir Carta</button>
-    <div class="puntuacion"></div>
+    <div class="seccion1">
+      <h1>Tu Carta Actual:</h1>
+      <img src="https://raw.githubusercontent.com/Lemoncode/fotos-ejemplos/main/cartas/back.jpg" alt="" class="carta">
+    </div>
+    <div class="seccion2">
+      <h1>Tus Puntos:</h1>
+      <div class="puntuacion">
+      </div>
+    </div>
+    <div class="seccion3">
+      <div class="botones">
+        <button class="pedirCarta">Pedir Carta</button>
+        <button class="mePlanto">Me Planto</button>
+        <button class="simular">Simular Final</button>
+        <button class="nuevaPartida">Nueva Partida</button>
+      </div>
+    </div>
     <script type="module" src="/src/main.ts"></script>
 </body>
 
